Add Kunjungan tab with API integration and logging
Introduces a new 'Kunjungan' tab to the WhatsAppSendLAB JavaFX application, allowing users to view and search lab visit data from an external API. Adds UI components, API endpoints, and helper methods for loading, displaying, and sending WhatsApp messages for lab visits. Implements logging of sent messages to the API website for tracking delivery status.